--- a/zybo/Test_sd/Debug/makefile
+++ b/zybo/Test_sd/Debug/makefile
@@ -40,7 +40,7 @@ main-build: Test_sd.elf secondary-outputs
 Test_sd.elf: $(OBJS) ../src/lscript.ld $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: ARM v7 gcc linker'
-	arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../Test_sd_bsp/ps7_cortexa9_0/lib -o "Test_sd.elf" $(OBJS) $(USER_OBJS) $(LIBS)
+	arm-none-eabi-gcc -Ofast -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../Test_sd_bsp/ps7_cortexa9_0/lib -o "Test_sd.elf" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
