--- a/presentation/Makefile
+++ b/presentation/Makefile
@@ -5,7 +5,7 @@ TOP ?= document.pdf
 #FIGS_PDF_T = $(patsubst %.fig,%.pdftex_t,$(FIGS))
 
 PNG       	= $(wildcard graphics/*.png)
-PNG_PDF   	= $(patsubst %.png, %.eps, $(PNG))
+PNG_EPS   	= $(patsubst %.png, %.eps, $(PNG))
 
 EPS			= $(wildcard graphics/*.eps)
 EPS_PDF		= $(patsubst %.eps, %.pdf, $(EPS))
@@ -14,10 +14,11 @@ EPS_PDF		= $(patsubst %.eps, %.pdf, $(EPS))
 #ODGS_PDF   = $(patsubst %.odg,%.pdf,$(ODGS))
 
 #NEEDED = $(FIGS_PDF) $(FIGS_PDF_T) $(SVGS_PDF) $(ODGS_PDF)
-NEEDED 		= $(PNG_PDF)
+NEEDED 		= $(PNG_EPS) $(EPS_PDF)
 
 TOP_NAME 	= $(patsubst %.pdf,%,$(TOP))
-EXT 		= pdf log aux out bbl blg toc snm nav fdb_latexmk fls
+EXT 		= pdf log aux out bbl blg toc snm nav fdb_latexmk fls dvi vrb
+EXT_TMP		= log aux out bbl blg toc snm nav fdb_latexmk fls vrb
 
 PREVIEW_OPTS  = \RequirePackage[active,delayed,tightpage,graphics,pdftex] {preview}
 PREVIEW_OPTS += \PreviewMacro[{*[][]{}}]{\incode}
@@ -26,9 +27,9 @@ export TEXINPUTS := ./texinputs/:$(TEXINPUTS)
 
 #.SECONDARY: $(FIGS_PDF)
 
-.PHONY: all clean toc bibtex view 
+.PHONY: all clean toc bibtex tmp_clean view_doc
 
-all: $(TOP)
+all: $(TOP) view_doc
 
 $(TOP) : $(NEEDED)
 
@@ -52,9 +53,16 @@ clean:
 	@rm -f $(NEEDED)
 	@$(foreach ext,$(EXT),[ -e preview.$(ext) ] && rm -f preview.$(ext) || true;)
 
-view: clean all
-	qpdfview $(TOP) &
+tmp_clean:
+	@echo Cleaning temporary files
+	@$(foreach ext,$(EXT_TMP),[ -e $(TOP_NAME).$(ext) ] && rm -f $(TOP_NAME).$(ext) || true;)
+	@$(foreach ext,$(EXT_TMP),[ -e preview.$(ext) ] && rm -f preview.$(ext) || true;)
+
+view_doc:
+	xdg-open $(TOP) && evince $(TOP) &
 
 %.eps:%.png
 	convert $< $@
 
+%.pdf:%.eps
+	inkscape -z -f $< --export-pdf=$@ -z
