--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ attack/chat.txt
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
